// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonIcon when is loading should be disabled and showing the loading icon 1`] = `
<DocumentFragment>
  <button
    class="text-xl text-neutral-shade-75 disabled:text-neutral-shade-38 disabled:cursor-not-allowed"
    disabled=""
  >
    <i
      aria-hidden="true"
      class="animate-spin flex"
    >
      <svg
        fill="currentColor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.75 17.25c-.615.615-1.626.622-2.125-.091a9 9 0 01-.446-.706c-.43-.756.008-1.666.828-1.958l.263-.095c.674-.24 1.404.123 1.786.727.382.605.397 1.42-.108 1.925l-.198.198zM10.144 4.81c-.217-.842.29-1.715 1.158-1.783A9 9 0 118.848 20.43c-.814-.305-1.061-1.285-.62-2.034.442-.75 1.408-.975 2.248-.748a5.85 5.85 0 101.621-11.497c-.87-.015-1.735-.498-1.953-1.34z"
        />
      </svg>
    </i>
  </button>
</DocumentFragment>
`;

exports[`ButtonIcon when is rendered should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="text-xl text-neutral-shade-75 disabled:text-neutral-shade-38 disabled:cursor-not-allowed"
  >
    <i
      aria-hidden="true"
      class="ci-settings_filled"
    />
  </button>
</DocumentFragment>
`;
